# bluerov2

./: .directory  README.md
bluerov2_control/: CMakeLists.txt  package.xml  ros2.repos
bluerov2_control/config/: anchors.yaml  bluerov2.rviz  bluerov2__body_control_pid.yaml  body_slider.yaml  cascaded_pid.yaml  sliding_mode.yaml  thruster_manager.yaml  tilt_control.yaml  tilt_slider.yaml
bluerov2_control/launch/: bluerov2.rviz  cascaded_pids.py  cascaded_pids_launch.py  rviz_launch.py  sliding_mode_launch.py  wrench_launch.py
bluerov2_description/: CMakeLists.txt  package.xml
bluerov2_description/hooks/: resource_paths.dsv.in
bluerov2_description/launch/: bluerov2.rviz  manual.yaml  rviz_launch.py  state_publisher_launch.py  thrusters.yaml  tilt.yaml  upload_bluerov2_launch.py  world_launch.py
bluerov2_description/meshes/: bluerov2_propccw.ive  bluerov2_propcw.ive  ping360_sonar.dae
bluerov2_description/scripts/: rviz_bridge.py
bluerov2_description/specs/: T200-Public-Performance-Data-10-20V-September-2019.xlsx  hydro.py
bluerov2_description/urdf/: auv_controls.sdf  bluerov2.urdf  bluerov2.xacro  demo_world.sdf  hydrodynamics.xacro  sensors.xacro  thrusters.xacro
bluerov2_description/urdf/snippets/: README.md  all_sensor_snippets.xacro  dvl_snippets.xacro  imu_snippets.xacro  pressure_snippets.xacro  stereo_snippets.xacro
bluerov2_ignition/: CMakeLists.txt  package.xml
bluerov2_ignition/launch/: state_publisher_launch.py  upload_bluerov2_launch.py  world_launch.py
bluerov2_ignition/urdf/: bluerov2.urdf  bluerov2.xacro  demo_world.sdf  (+3 more)
(+7 files in other folders)
